# meshguard

./: Cargo.toml  README  test_ports.sh  test_service_exposure.sh
.github/workflows/: rust.yml
examples/: udp_loopback.rs
src/: config.rs  identity.rs  io.rs  lib.rs  tun.rs  tunnel.rs  wg_config.rs
src/transport/: inmem.rs  iroh.rs  mod.rs  udp.rs
tests/: handshake.rs
