[package]
name = "meshguard"
version = "0.1.0"
edition = "2021"
description = "A WireGuard client whose transport is routed by iroh: dial a VPN peer by its NodeId."
license = "BSD-3-Clause"

[lib]
name = "meshguard"
path = "src/lib.rs"

[[bin]]
name = "meshguard"
path = "src/bin/meshguard.rs"

[features]
default = []
# Real TUN network interface (Linux/macOS). Running it needs root/CAP_NET_ADMIN.
tun = ["dep:tun"]
# The iroh transport: dial peers by NodeId over the DHT with hole-punching.
# Needs a newer Rust toolchain than the 1.75 used to verify the core.
iroh = ["dep:iroh", "dep:bytes"]
full = ["tun", "iroh"]

[dependencies]
# --- WireGuard protocol core (always on) ---
# boringtun 0.6.0 pinned release-candidate dalek crates that conflict with iroh;
# 0.7+ tracks released x25519-dalek 2 / curve25519-dalek 4.
boringtun = "0.7"
curve25519-dalek = "=4.1.3"
ed25519-dalek = "=2.1.1"
sha2 = "0.10"
rand = "0.8"
# Compatibility pins: these exact versions let the CORE build and self-test on an
# older toolchain (verified on Rust 1.75). They sit within iroh 0.35's accepted
# ranges, so `--features full` still resolves. On Rust >= 1.85 you may relax them
# (change `=x.y.z` to `x`). See docs/BUILD.md for the full toolchain matrix.
zeroize = "=1.7.0"
zeroize_derive = "=1.4.2"
base64ct = "=1.6.0"

# --- async runtime + plumbing (always on) ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
async-trait = "0.1"
anyhow = "1"
data-encoding = "2"
dirs = "5"

# --- optional transports / device ---
bytes = { version = "1", optional = true }
tun = { version = "0.6", features = ["async"], optional = true }
iroh = { version = "0.35", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
